tests/snapshots/runtime_error_fixtures/base_fold_callback_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_fold_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 2 errors • examples/runtime_errors/base_fold_callback_arity.flx
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/runtime_errors/base_fold_callback_arity.flx:2:19
  |
2 |     let ignored = fold(#[1], 0, len)
  |                   ^^^^^^^^^^^^^^^^^^
  |                   ------------------ parameter 1 has type `Array<Int>`

  |                   ------------------ this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `len`.

  examples/runtime_errors/base_fold_callback_arity.flx:2:33
  |
2 |     let ignored = fold(#[1], 0, len)
  |                                 ^^^

Hint:
  Define it first: let len = ...;

Found 2 errors.
